[gd_scene load_steps=9 format=3 uid="uid://cqkk041hdwhgr"]

[ext_resource type="Script" uid="uid://bdd6swgg625c1" path="res://addons/inventory_manager/menu_button_mod.gd" id="1"]
[ext_resource type="Script" uid="uid://brbdjr2vsbkvw" path="res://addons/inventory_manager/inventory.gd" id="2"]
[ext_resource type="SpriteFrames" path="res://animations/treasure.tres" id="3"]
[ext_resource type="StyleBox" path="res://addons/inventory_manager/slot_hover.tres" id="5"]
[ext_resource type="StyleBox" path="res://addons/inventory_manager/slot_normal.tres" id="6"]
[ext_resource type="StyleBox" path="res://addons/inventory_manager/slot_focus.tres" id="7"]
[ext_resource type="StyleBox" path="res://addons/inventory_manager/slot_disabled.tres" id="8"]
[ext_resource type="StyleBox" path="res://addons/inventory_manager/slot_pressed.tres" id="9"]

[node name="Inventory" type="PanelContainer"]
custom_minimum_size = Vector2(272, 238)
anchors_preset = -1
anchor_right = 0.375
anchor_bottom = 0.346
offset_right = -28.0
offset_bottom = 30.4
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Valid / Invalid item"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Done"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Label3"]
autostart = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Confirm"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Discard"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
columns = 3

[node name="Button1" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button1"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button2" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button2"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button3" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button3"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button4" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button4"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button5" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button5"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button6" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button6"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button7" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button7"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button8" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button8"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="Button9" type="MenuButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = ExtResource("7")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/normal = ExtResource("6")
toggle_mode = false
action_mode = 1
button_mask = 3
flat = false
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/GridContainer/Button9"]
position = Vector2(30.1435, 30.2278)
sprite_frames = ExtResource("3")
animation = &"Empty"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Item Properties"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="Button2" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="timeout" from="VBoxContainer/HBoxContainer/VBoxContainer/Label3/Timer" to="." method="_on_confirm_label_timeout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_discard_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_cancel_pressed"]
